ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: website01.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: servic1
            port:
              number: 80
  - host: website02.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: servic2
            port:
              number: 80
